iai-callgrind/tests/ui/test_main_invalid_library_benchmark_setup_deprecated.stderr
error: You are using a deprecated syntax of the main! macro to set up library benchmarks. See the README (https://github.com/Joining7943/iai-callgrind) and docs (https://docs.rs/iai-callgrind/latest/iai_callgrind/) for further details.
 --> tests/ui/test_main_invalid_library_benchmark_setup_deprecated.rs:4:5
  |
4 |     main!(some_func);
  |     ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You are using a deprecated syntax of the main! macro to set up library benchmarks. See the README (https://github.com/Joining7943/iai-callgrind) and docs (https://docs.rs/iai-callgrind/latest/iai_callgrind/) for further details.
  --> tests/ui/test_main_invalid_library_benchmark_setup_deprecated.rs:10:5
   |
10 | /     main!(
11 | |         callgrind_args = "some";
12 | |         functions = some_func
13 | |     );
   | |_____^
   |
   = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
