iai-callgrind/tests/ui/test_main_invalid_library_benchmark_setup_deprecated.rs
mod test_main_deprecated_plain_functions {
    use iai_callgrind::main;
    fn some_func() {}
    main!(some_func);
}

mod test_main_deprecated_callgrind_args_and_functions {
    use iai_callgrind::main;
    fn some_func() {}
    main!(
        callgrind_args = "some";
        functions = some_func
    );
}

fn main() {}
